<!--
  ~  Copyright (c) 2019 - 2023
  ~  QGdev - Quentin GOMES DOS REIS
  ~
  ~  This file is part of OpenWeather.
  ~
  ~  OpenWeather is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  OpenWeather is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with OpenWeather. If not, see <http://www.gnu.org/licenses/>
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory app:title="@string/title_settings_api">

        <androidx.preference.EditTextPreference
            app:key="conf_api_key"
            app:title="@string/title_settings_api_key"
            android:inputType="textVisiblePassword"
            app:useSimpleSummaryProvider="true" />

        <!--
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="aqi_state"
            app:title="@string/title_settings_aqi_state"
            app:summaryOn="@string/summary_enable_settings_aqi_state"
            app:summaryOff="@string/summary_disable_settings_aqi_state" />
        !-->
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/title_settings_time">
        <androidx.preference.ListPreference
            app:defaultValue="@string/default_hourformat"
            app:entries="@array/time_format"
            app:entryValues="@array/time_format_values"
            app:key="conf_time_format"
            app:title="@string/title_settings_hour_format"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/title_settings_units">

        <androidx.preference.ListPreference
            app:entries="@array/temperature_units"
            app:entryValues="@array/temperature_units_values"
            app:key="conf_temperature_unit"
            app:title="@string/title_settings_units_temperature"
            app:defaultValue="celsius"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.ListPreference
            app:entries="@array/measure_units"
            app:entryValues="@array/measure_units_values"
            app:key="conf_measure_unit"
            app:title="@string/title_settings_units_measure"
            app:defaultValue="metric"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.ListPreference
            app:entries="@array/pressure_units"
            app:entryValues="@array/pressure_units_values"
            app:key="conf_pressure_unit"
            app:title="@string/title_settings_units_pressure"
            app:defaultValue="hpa"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.ListPreference
            app:entries="@array/wind_direction_units"
            app:entryValues="@array/wind_direction_units_values"
            app:key="conf_direction_unit"
            app:title="@string/title_settings_units_direction"
            app:defaultValue="cardinal"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/title_settings_update">
        <androidx.preference.SwitchPreference
            app:key="conf_update_periodic"
            app:summaryOff="@string/summary_disabled_settings_update_periodic"
            app:summaryOn="@string/summary_enabled_settings_update_periodic"
            app:title="@string/title_settings_update_periodic" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>