<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2019 - 2023
  ~  QGdev - Quentin GOMES DOS REIS
  ~
  ~  This file is part of OpenWeather.
  ~
  ~  OpenWeather is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  OpenWeather is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with OpenWeather. If not, see <http://www.gnu.org/licenses/>
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="24dp"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:orientation="vertical">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/time"
        android:tooltipText="@string/icon_legend_data_time" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="45dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/clouds_and_sun_material"
        android:tooltipText="@string/icon_legend_weather_condition" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/temperature_material"
        android:tooltipText="@string/icon_legend_temperature" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/temperature_feels_like_material"
        android:tooltipText="@string/icon_legend_feel_like_temperature"
        app:tint="@color/colorSecondaryGraphPaint" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/humidity_material"
        android:tooltipText="@string/icon_legend_humidity"
        app:tint="@color/colorTertiaryGraphPaint" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="45dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/barometer_material"
        android:tooltipText="@string/icon_legend_atmo_pressure" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="58dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/uv_index_material"
        android:tooltipText="@string/icon_legend_uv_index" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="25dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/dew_point_material"
        android:tooltipText="@string/icon_legend_dew_point" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/cloudy_material"
        android:tooltipText="@string/icon_legend_cloudiness" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/visibility"
        android:tooltipText="@string/icon_legend_visibility" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/windsock_material"
        android:tooltipText="@string/icon_legend_wind_speed" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/wind_material"
        android:tooltipText="@string/icon_legend_wind_gust_speed"
        app:tint="@color/colorSecondaryGraphPaint" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="70dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/wind_vane_material"
        android:tooltipText="@string/icon_legend_wind_direction" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/rain_material"
        android:tooltipText="@string/icon_legend_rain"
        app:tint="@color/colorTertiaryGraphPaint" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        app:tint="@color/colorIcons"
        android:src="@drawable/snow_material"
        android:tooltipText="@string/icon_legend_snow" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/umbrella_material"
        android:tooltipText="@string/icon_legend_pop"
        app:tint="@color/colorSecondaryGraphPaint" />

</LinearLayout>