<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2019 - 2023
  ~  QGdev - Quentin GOMES DOS REIS
  ~
  ~  This file is part of OpenWeather.
  ~
  ~  OpenWeather is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  OpenWeather is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with OpenWeather. If not, see <http://www.gnu.org/licenses/>
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/air_quality_information_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        app:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/exit_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorIcons" />

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/title_dialog_air_quality_information"
                    android:textColor="@color/colorFirstText"
                    android:textSize="@dimen/text_size_dialog_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/exit_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/title_air_quality_so2"
                android:textColor="@color/colorFirstText"
                android:textSize="@dimen/text_size_dialog_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/content_air_quality_so2_information"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_dialog_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_air_quality_no2"
                android:textColor="@color/colorFirstText"
                android:textSize="@dimen/text_size_dialog_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/content_air_quality_no2_information"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_dialog_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_air_quality_pm10"
                android:textColor="@color/colorFirstText"
                android:textSize="@dimen/text_size_dialog_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/content_air_quality_pm10_information"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_dialog_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/title_air_quality_pm25"
                android:textColor="@color/colorFirstText"
                android:textSize="@dimen/text_size_dialog_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/content_air_quality_pm25_information"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_dialog_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_air_quality_o3"
                android:textColor="@color/colorFirstText"
                android:textSize="@dimen/text_size_dialog_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/content_air_quality_o3_information"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_dialog_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_air_quality_co"
                android:textColor="@color/colorFirstText"
                android:textSize="@dimen/text_size_dialog_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/content_air_quality_co_information"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_dialog_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>